# PDN_research

PDN_Sensitivity_Analysis/: .gitignore  CMakeLists.txt  CODE_EXPLANATION.md  PLOT_ANALYSIS_GUIDE.md  README.md  REAME.md  demo_visualization.sh  gen.sh  pdn_example  plot_sensitivity_results.py  plot_sensitivity_results_simple.py  run.sh  sensitivity_report.txt  visualize_pdn.py  visualize_pdn_cpp.cpp
PDN_Sensitivity_Analysis/READMEs/: EXAMPLE_WALKTHROUGH.md  EXTRACTION_SUMMARY.md  RESEARCH_METHODOLOGY.md  SENSITIVITY_ANALYSIS_EXPLANATION.md  VISUALIZATION_GUIDE.md
PDN_Sensitivity_Analysis/benchmarks/testcase1/: gen.flp  gen.mlcf  gen.padloc  gen.ptrace  pdn.config
PDN_Sensitivity_Analysis/benchmarks/testcase2/: gen.flp  gen.padloc  gen.ptrace  pdn.config
PDN_Sensitivity_Analysis/include/: PDNLoadMapper.h  PDNNetwork.h  PDNSolver.h  PixelModel.h  VoltSpotVirtualGrid.h
PDN_Sensitivity_Analysis/out_voltspot/: ir_drop.gridIR
PDN_Sensitivity_Analysis/src/: PDNLoadMapper.cpp  PDNNetwork.cpp  PDNSolver.cpp  PixelModel.cpp  VoltSpotVirtualGrid.cpp  sensitivity_analysis.cpp
PDN_Sensitivity_Analysis/src/examples/: example.cpp  pdn_load_example.cpp  voltspot_grid_example.cpp
PDN_Sensitivity_Analysis/tools/: README.md  spice_netviz.py  spice_to_flp_ptrace.py  visualize_ibm_solution.py  visualize_ir_drop.py  visualize_pdn_loads.py
